--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,6 +1,7 @@
 <!-- Portfolio Modals -->
 {% for post in site.posts %}
-<div class="portfolio-modal modal fade" id="portfolioModal-1" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
+<div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog"
+  aria-hidden="true">
   <div class="modal-content">
     <div class="close-modal" data-dismiss="modal">
       <div class="lr">
@@ -12,416 +13,28 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <div class="modal-body">
-            <h2>Project 1</h2>
+            <h2>{{ post.title }}</h2>
             <hr class="star-primary">
-            <img src="img/portfolio/Through_the_Trees.jpg" class="img-responsive img-centered" alt="Through the Trees">
-<a class="prev" href="#portfolioModal-12" data-toggle="modal" data-dismiss="modal">❮</a>
-<a class="next" href="#portfolioModal-2" data-toggle="modal" data-dismiss="modal">❯</a>
-            
+            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+            {% if post.description %}
+            <p>{{ post.description }}</p>
+            {% endif %}
             <ul class="list-inline item-details">
-              
-              
-              <li>Date:
-                <strong>February 2023</strong>
+              {% if post.client %}
+              <li>Client:
+                <strong>{{ post.client }}</strong>
               </li>
-              
-              
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="portfolio-modal modal fade" id="portfolioModal-2" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
-  <div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
-      <div class="lr">
-        <div class="rl">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="modal-body">
-            <h2>Project 2</h2>
-            <hr class="star-primary">
-            <img src="img/portfolio/Woodland_Jam.jpg" class="img-responsive img-centered" alt="Woodland Jam">
-<a class="prev" href="#portfolioModal-1" data-toggle="modal" data-dismiss="modal">❮</a>
-<a class="next" href="#portfolioModal-3" data-toggle="modal" data-dismiss="modal">❯</a>
-           
-            <ul class="list-inline item-details">
-              
-              
+              {% endif %}
+              {% if post.project-date %}
               <li>Date:
-                <strong>February 2023</strong>
+                <strong>{{ post.project-date }}</strong>
               </li>
-              
-              
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="portfolio-modal modal fade" id="portfolioModal-3" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
-  <div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
-      <div class="lr">
-        <div class="rl">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="modal-body">
-            <h2>Project 3</h2>
-            <hr class="star-primary">
-            <img src="img/portfolio/Plein_Air_Painters.jpg" class="img-responsive img-centered" alt="Plein Air Painters">
-<a class="prev" href="#portfolioModal-2" data-toggle="modal" data-dismiss="modal">❮</a>
-<a class="next" href="#portfolioModal-4" data-toggle="modal" data-dismiss="modal">❯</a>
-           
-            <ul class="list-inline item-details">
-              
-              
-              <li>Date:
-                <strong>February 2023</strong>
+              {% endif %}
+              {% if post.category %}
+              <li>Service:
+                <strong>{{ post.category }}</strong>
               </li>
-              
-              
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="portfolio-modal modal fade" id="portfolioModal-4" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
-  <div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
-      <div class="lr">
-        <div class="rl">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="modal-body">
-            <h2>Project 4</h2>
-            <hr class="star-primary">
-            <img src="img/portfolio/Something's_Fishy.jpg" class="img-responsive img-centered" alt="Something's Fishy">
-<a class="prev" href="#portfolioModal-3" data-toggle="modal" data-dismiss="modal">❮</a>
-<a class="next" href="#portfolioModal-5" data-toggle="modal" data-dismiss="modal">❯</a>
-            
-            <ul class="list-inline item-details">
-              
-              
-              <li>Date:
-                <strong>February 2023</strong>
-              </li>
-              
-              
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="portfolio-modal modal fade" id="portfolioModal-5" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
-  <div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
-      <div class="lr">
-        <div class="rl">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="modal-body">
-            <h2>Project 5</h2>
-            <hr class="star-primary">
-            <img src="img/portfolio/Cat_Cafe.jpg" class="img-responsive img-centered" alt="Cat Café">
-<a class="prev" href="#portfolioModal-4" data-toggle="modal" data-dismiss="modal">❮</a>
-<a class="next" href="#portfolioModal-6" data-toggle="modal" data-dismiss="modal">❯</a>
-            
-            <ul class="list-inline item-details">
-              
-              
-              <li>Date:
-                <strong>February 2023</strong>
-              </li>
-              
-              
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="portfolio-modal modal fade" id="portfolioModal-6" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
-      <div class="lr">
-        <div class="rl">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="modal-body">
-            <h2>Project 6</h2>
-            <hr class="star-primary">
-            <img src="img/portfolio/The_Lilac_Bush.jpg" class="img-responsive img-centered" alt="image-alt">
-<a class="prev" href="#portfolioModal-5" data-toggle="modal" data-dismiss="modal">❮</a>
-<a class="next" href="#portfolioModal-7" data-toggle="modal" data-dismiss="modal">❯</a>
-            
-            <ul class="list-inline item-details">
-              
-              
-              <li>Date:
-                <strong>February 2023</strong>
-              </li>
-              
-              
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="portfolio-modal modal fade" id="portfolioModal-7" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
-      <div class="lr">
-        <div class="rl">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="modal-body">
-            <h2>Project 7</h2>
-            <hr class="star-primary">
-            <img src="img/portfolio/Home.jpg" class="img-responsive img-centered" alt="Home">
-<a class="prev" href="#portfolioModal-6" data-toggle="modal" data-dismiss="modal">❮</a>
-<a class="next" href="#portfolioModal-8" data-toggle="modal" data-dismiss="modal">❯</a>
-            
-            <ul class="list-inline item-details">
-              
-              
-              <li>Date:
-                <strong>February 2023</strong>
-              </li>
-              
-              
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="portfolio-modal modal fade" id="portfolioModal-8" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
-      <div class="lr">
-        <div class="rl">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="modal-body">
-            <h2>Project 8</h2>
-            <hr class="star-primary">
-            <img src="img/portfolio/Winter_Friends.jpg" class="img-responsive img-centered" alt="Winter Friends">
-<a class="prev" href="#portfolioModal-7" data-toggle="modal" data-dismiss="modal">❮</a>
-<a class="next" href="#portfolioModal-9" data-toggle="modal" data-dismiss="modal">❯</a>
-            
-            <ul class="list-inline item-details">
-              
-              
-              <li>Date:
-                <strong>February 2023</strong>
-              </li>
-              
-              
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="portfolio-modal modal fade" id="portfolioModal-9" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
-      <div class="lr">
-        <div class="rl">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="modal-body">
-            <h2>Project 9</h2>
-            <hr class="star-primary">
-            <img src="img/portfolio/A_Stellar_Dream.jpg" class="img-responsive img-centered" alt="A Stellar Dream">
-<a class="prev" href="#portfolioModal-8" data-toggle="modal" data-dismiss="modal">❮</a>
-<a class="next" href="#portfolioModal-10" data-toggle="modal" data-dismiss="modal">❯</a>
-            
-            <ul class="list-inline item-details">
-              
-              
-              <li>Date:
-                <strong>February 2023</strong>
-              </li>
-              
-              
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="portfolio-modal modal fade" id="portfolioModal-10" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
-      <div class="lr">
-        <div class="rl">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="modal-body">
-            <h2>Project 10</h2>
-            <hr class="star-primary">
-            <img src="img/portfolio/The_Haircut.jpg" class="img-responsive img-centered" alt="The Haircut">
-<a class="prev" href="#portfolioModal-9" data-toggle="modal" data-dismiss="modal">❮</a>
-<a class="next" href="#portfolioModal-11" data-toggle="modal" data-dismiss="modal">❯</a>
-            
-            <ul class="list-inline item-details">
-              
-              
-              <li>Date:
-                <strong>February 2023</strong>
-              </li>
-              
-              
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="portfolio-modal modal fade" id="portfolioModal-11" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
-      <div class="lr">
-        <div class="rl">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="modal-body">
-            <h2>Project 11</h2>
-            <hr class="star-primary">
-            <img src="img/portfolio/Blanket_Bunny.jpg" class="img-responsive img-centered" alt="Blanket Bunny">
-<a class="prev" href="#portfolioModal-10" data-toggle="modal" data-dismiss="modal">❮</a>
-<a class="next" href="#portfolioModal-12" data-toggle="modal" data-dismiss="modal">❯</a>
-            
-            <ul class="list-inline item-details">
-              
-              
-              <li>Date:
-                <strong>February 2023</strong>
-              </li>
-              
-              
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="portfolio-modal modal fade" id="portfolioModal-12" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
-      <div class="lr">
-        <div class="rl">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="modal-body">
-            <h2>Project 12</h2>
-            <hr class="star-primary">
-            <img src="img/portfolio/Day_at_the_Beach.jpg" class="img-responsive img-centered" alt="Day at the Beach">
-<a class="prev" href="#portfolioModal-11" data-toggle="modal" data-dismiss="modal">❮</a>
-<a class="next" href="#portfolioModal-1" data-toggle="modal" data-dismiss="modal">❯</a>
-            
-            <ul class="list-inline item-details">
-              
-              
-              <li>Date:
-                <strong>February 2023</strong>
-              </li>
-              
-              
+              {% endif %}
             </ul>
             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
               Close</button>
