--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,27 +16,16 @@
         Since then, I've continued to create with traditional and digital media, with a special interest in children's illustration
         and storytelling.</p>
       </div>
-      <div class="col-lg-8 col-lg-offset-2 text-center">
-        <div class="artwork" style="width: 679px; margin: 0 auto;">
-<span style="float: left;">
-<figure class="figure">
-  <img src="img/portfolio/dolphins-on-parade-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Dolphins on Parade" style="box-shadow: 3px 3px 3px lightgray;">
-  <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Dolphins on Parade" sponsor: Molson<br>Easter Seals &amp; Maritime Forces Atlantic<br>public art project</i></figcaption>
-</figure></span> 
-
-<span style="float: left;">
-<figure class="figure">
-  <img src="img/portfolio/cat-nap-detail-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Cat Nap" style="box-shadow: 3px 3px 3px lightgray;">
-  <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Cat Nap" - acrylic (detail)</i></figcaption>
-</figure></span>
-
-<span style="float: right; padding-right: 25px;">
-<figure class="figure">
-  <img src="img/portfolio/maple-leaves-detail-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Maple Leaves" style="box-shadow: 3px 3px 3px lightgray;">
-  <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Maple Leaves" - acrylic (detail)</i></figcaption>
-</figure></span>
-</div>
-      </div>
-    </div>
+      <div class="portfolio-flex-row">
+    <div class="col-12 col-md-2"></div>
+      <div class="col-12 col-md-3">
+        <figure><img src="img/portfolio/dolphins-on-parade-erika-himsl.jpg" class="img-responsive" alt="Dolphins on Parade"><figcaption><i>"Dolphins on Parade" sponsor: Molson<br>Easter Seals &amp; Maritime Forces Atlantic<br>public art project</i></figcaption>
+        </figure></div>
+      <div class="col-12 col-md-3">
+          <figure><img src="img/portfolio/cat-nap-detail-erika-himsl.jpg" class="img-responsive" alt="Dolphins on Parade"><figcaption><i>"Cat Nap" - acrylic (detail)</i></figcaption>
+      </figure></div>
+      <div class="col-12 col-md-3">
+          <figure><img src="img/portfolio/maple-leaves-detail-erika-himsl.jpg" class="img-responsive" alt="Dolphins on Parade"><figcaption><i>"Maple Leaves" - acrylic (detail)</i></figcaption>
+      </figure></div><div class="col-12 col-md-1"></div></div>
   </div>
 </section>
