--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -2,29 +2,29 @@
   <div class="container portfolio-flex-grid">
     <div class="row">     
 <div class="col-lg-11">
-        <img src="img/portfolio/Woodland_Jam.jpg" class="img-responsive img-centered" alt="Woodland Jam">
+        <img src="img/portfolio/Woodland-Jam.jpg" class="img-responsive img-centered" alt="Woodland Jam">
 </div>   
 <div class="col-12 col-md-7">
-        <img src="img/portfolio/Cat_Cafe.jpg" class="img-responsive img-centered" alt="Cat Café">
+        <img src="img/portfolio/Cat-Cafe.jpg" class="img-responsive img-centered" alt="Cat Café">
       </div>
         <div class="col-6 col-md-4">
-        <img src="img/portfolio/Plein_Air_Painters.jpg" class="img-responsive img-centered" alt="Plein Air Painters">
+        <img src="img/portfolio/Plein-Air-Painters.jpg" class="img-responsive img-centered" alt="Plein Air Painters">
       </div>
     </div>
     <div class="portfolio-flex-row">
       <div class="col-12 col-md-4">
-        <img src="img/portfolio/Through_the_Trees.jpg" class="img-responsive" alt="Through the Trees">
+        <img src="img/portfolio/Through-the-Trees.jpg" class="img-responsive" alt="Through the Trees">
         </div>
       <div class="col-12 col-md-4">
-          <img src="img/portfolio/Winter_Friends.jpg" class="img-responsive" alt="Winter Friends">
+          <img src="img/portfolio/Winter-Friends.jpg" class="img-responsive" alt="Winter Friends">
       </div>
       <div class="col-12 col-md-4">
           <img src="img/portfolio/Home.jpg" class="img-responsive" alt="Home">
       </div>
         <div class="col-12 col-md-8">
-        <img src="img/portfolio/Day_at_the_Beach.jpg" class="img-responsive img-centered" alt="Day at the Beach">
-      </div><div class="col-12 col-md-4"><img src="img/portfolio/The_Lilac_Bush.jpg" class="img-responsive" alt="The Lilac Bush">
+        <img src="img/portfolio/Day-at-the-Beach.jpg" class="img-responsive img-centered" alt="Day at the Beach">
+      </div><div class="col-12 col-md-4"><img src="img/portfolio/The-Lilac-Bush.jpg" class="img-responsive" alt="The Lilac Bush">
     </div>
-      <div class="col-md-6"><img src="img/portfolio/The_Haircut.jpg" class="img-responsive" alt="The Haircut"></div><div class="col-md-6"><img src="img/portfolio/A_Stellar_Dream.jpg" class="img-responsive" alt="A Stellar Dream"></div>
-      <div class="col-md-1"></div><div class="col-md-7"><img src="img/portfolio/Something's_Fishy.jpg" class="img-responsive" alt="Something's Fishy"></div><div class="col-md-3"><img src="img/portfolio/Blanket_Bunny.jpg" class="img-responsive" alt="Blanket Bunny"></div><div class="col-md-1"></div></div>
+      <div class="col-md-6"><img src="img/portfolio/The-Haircut.jpg" class="img-responsive" alt="The Haircut"></div><div class="col-md-6"><img src="img/portfolio/A-Stellar-Dream.jpg" class="img-responsive" alt="A Stellar Dream"></div>
+      <div class="col-md-1"></div><div class="col-md-7"><img src="img/portfolio/Something's-Fishy.jpg" class="img-responsive" alt="Something's Fishy"></div><div class="col-md-3"><img src="img/portfolio/Blanket-Bunny.jpg" class="img-responsive" alt="Blanket Bunny"></div><div class="col-md-1"></div></div>
 </div></section>
