--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -95,7 +95,7 @@ header {
     text-align: center;
     color: white;
     background: #f0f2f2;
-    height: 20px;
+    height: 0px;
 }
 
 header .container {
@@ -354,6 +354,10 @@ padding: 2px 6px;
       max-width: 23.5%;
     }
   } */
+
+.container.portfolio-flex-grid {
+  margin-top: 20px;
+}
 
 .btn-outline {
     margin-top: 15px;
