--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -23,6 +23,7 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
+    text-decoration-line: underline;
 }
 
 a:link {
@@ -186,7 +187,7 @@ header .intro-text .skills {
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: white;
-    text-decoration-line: underline;
+    text-decoration-line: underline!important;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
