--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -165,6 +165,7 @@ header .intro-text .skills {
     font-family: 'Jost',"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 300;
     font-size: 1.3em;
+    background-color: black;
 }
 
 .navbar a:focus {
