--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -180,9 +180,9 @@ header .intro-text .skills {
     border: 0;
 }
 
-.navbar-default .navbar-nav>.active>a {
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus
     color: white;
-    text-decoration-line: underline !important;
+    text-decoration-line: underline;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
