--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -18,12 +18,16 @@ p.small {
 }
 
 a,
-a:hover,
 a:focus,
 a:active,
 a.active {
     outline: 0;
     color: white;
+}
+
+a:active {
+    color: white;
+    text-decoration-line: underline;
 }
 
 a:hover {
@@ -180,7 +184,7 @@ header .intro-text .skills {
     border: 0;
 }
 
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus
     color: white;
     text-decoration-line: underline;
 }
