--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -26,7 +26,7 @@ a.active {
 }
 
 a:active {
-    color: white;
+    color: white !important;
     text-decoration-line: underline;
 }
 
@@ -185,6 +185,7 @@ header .intro-text .skills {
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus
     text-decoration-line: underline;
+    color: white;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
@@ -193,6 +194,12 @@ header .intro-text .skills {
 
 .navbar-brand {
     padding: 5px 15px 5px;
+}
+
+.navbar-nav>.active>a {
+    background-color: black !important;
+    text-decoration-line: underline !important;
+    color: white !important;
 }
 
 .navbar-toggle {
@@ -574,12 +581,6 @@ margin-bottom: 30px;
 
 .modal-content {
     background-color: transparent;
-}
-
-.navbar-nav>.active>a {
-    background-color: black !important;
-    text-decoration-line: underline !important;
-    color: white;
 }
 
 .text-danger, .text-danger:hover {
