--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -317,6 +317,7 @@ section.success {
 font-family: 'Dancing Script', cursive;
 font-weight: 700;
 font-size: 1.9em;
+text-align: center;
 color: black;
 }
 
