--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -214,7 +214,7 @@ header .intro-text .skills {
     border: none;
 }
 
-.navbar-header.navbar-scroll .sig {
+.navbar-header.page-scroll .sig {
     max-width: 120px;
 }
 
