--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -214,7 +214,7 @@ header .intro-text .skills {
     border-color: transparent;
 }
 
-@media only screen and (max-width: 200px) {
+@media(max-width:200px) {
   .sig {
     max-width: 120px;
   }
