--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -214,18 +214,22 @@ header .intro-text .skills {
     background-color: transparent;
 }
 
+.navbar-toggle:hover {
+    background-color: transparent;
+}
+
 .navbar-default .navbar-toggle {
     border-color: transparent;
 }
 
 @media(max-width:450px) {
-  #portfolio figcaption {
+  figcaption {
     font-size: 1.3em;
   }
 }
 
 @media(max-width:450px) {
-  #portfolio figure {
+  figure {
     border: solid 5px white;
   }
 }
@@ -328,7 +332,7 @@ section.success {
     z-index: 2;
 }
 
-#portfolio figure {
+figure {
   border: solid 10px white;
   box-shadow: 3px 3px 3px lightgray;
   background-color: white;
@@ -342,7 +346,7 @@ section.success {
     }
 }
 
-#portfolio figcaption {
+figcaption {
 font-family: 'Dancing Script', cursive;
 font-weight: 700;
 font-size: 1.9em;
