--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -356,7 +356,7 @@ color: black;
 }
 
 #about figcaption {
-font-family: 'Jost',"Helvetica Neue",Helvetica,Arial,sans-serif;
+font-family: 'Libre Baskerville', serif;
 font-size: 15px;
 font-weight: normal;
 text-align: center;
