--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -211,15 +211,15 @@ header .intro-text .skills {
 }
 
 .navbar-toggle:active {
-    background-color: transparent;
+    background-color: transparent !important;
 }
 
 .navbar-toggle:focus {
-    background-color: transparent;
+    background-color: transparent !important;
 }
 
 .navbar-toggle:hover {
-    background-color: transparent;
+    background-color: transparent !important;
 }
 
 .navbar-default .navbar-toggle {
@@ -356,7 +356,7 @@ color: black;
 }
 
 #about figcaption {
-font-family: 'Libre Baskerville', serif;
+font-family: 'Lato', sans-serif;
 font-size: 15px;
 font-weight: normal;
 text-align: center;
